--- a/css/footer.css
+++ b/css/footer.css
@@ -5,13 +5,14 @@
     font-size: 16px;
     font-weight: 900;
     display: flex;
-    width: 390px; /*make this the proper way*/
-    margin: 0;
-    margin-left: -18px;
-    margin-bottom: -10px;
-    
-  }
+    width: 100%;
+    margin-bottom: 0% ;
+    padding: 0% ;
+}
 
+body{
+  margin: 0px;
+}
 
 .text {
   float:left;
